multi-tenant support related bugs resolved

--- a/App/ClientApp/src/app/layout/tenants/add/add.component.html
+++ b/App/ClientApp/src/app/layout/tenants/add/add.component.html
@@ -29,7 +29,7 @@
               <div *ngIf="(image=='' || image==null) && updateOperationMode">
                 <div class="ltr-img">
                   <span>{{FirstChar | titlecase}}</span>
-                  <span>{{SecondChar | titlecase}}</span>
+                  <!-- <span>{{SecondChar | titlecase}}</span> -->
                 </div>
               </div>
               <ng-template #imageIcon>
