--- a/App/ClientApp/src/app/layout/tenants/list/list.component.html
+++ b/App/ClientApp/src/app/layout/tenants/list/list.component.html
@@ -21,7 +21,7 @@
           </mat-paginator>
         </div>
       </div>
-      <div class="widget-area-grid padding-0">
+      <div class="widget-area-grid padding-0" *ngIf='tenantList!=undefined && tenantList.length>0'>
         <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
           <!-- Position Column -->
           <ng-container matColumnDef="name">
@@ -39,8 +39,8 @@
           <ng-container matColumnDef="country">
             <th class="width25 ip-w-20" mat-header-cell *matHeaderCellDef> Country </th>
             <td mat-cell *matCellDef="let tenant">
-              <span *ngIf="tenant.Country.CountryName==null">-</span>
-              <span *ngIf="tenant.Country.CountryName!=null">{{tenant.Country.CountryName}}</span>
+              <span *ngIf="tenant.Country!= null && tenant.Country.CountryName==null">-</span>
+              <span *ngIf="tenant.Country!= null && tenant.Country.CountryName!=null">{{tenant.Country.CountryName}}</span>
             </td>
           </ng-container>
 
@@ -70,6 +70,9 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
       </div>
+      <div class="widget-area-grid padding-0 text-center" *ngIf='tenantList!=undefined && tenantList.length==0'>
+        <label>No record found.</label>
+    </div>
     </div>
   </div>
   <!--desktop view end-->
