--- a/App/ClientApp/src/app/layout/tenants/add/add.component.html
+++ b/App/ClientApp/src/app/layout/tenants/add/add.component.html
@@ -104,7 +104,12 @@
               </div>
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
                 <label>Address</label><span class="text-danger ml-2">*</span>
-                <textarea class="form-control" rows="4" formControlName="tenantAddress"></textarea>
+                <textarea class="form-control" rows="4" formControlName="tenantAddress" (change)="onTenantAddressChange($event.target.value)"></textarea>
+                <ul style="list-style-type:none">
+                  <li class="text-danger" *ngIf="tenantAddressFieldError==true">
+                    Address field required.
+                  </li>
+                </ul>
               </div>
             </div>
             <div class="row">
