redirection issue resolve which occurred while tenant group has more than one tenant role assigned.

--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class='top-bar fixed'>
   <button class="fa float-left hamburger xs-hamburger fa" (click)="toggleNav()" [ngClass]="collapse_toogleClass"></button>
-  <div class="side-bar-logo text-center d-none d-md-block" (click)="navigateToDashoard()" style="cursor: pointer;">
+  <div class="side-bar-logo text-center d-none d-md-block" (click)="navigateToRespectiveUserLandingPage()" style="cursor: pointer;">
     <img src="assets/images/new_nis_logo_white.png" width="250">
   </div>
   <!--mobile start-->
