Bug Fixes and DynamicWidgteAPI

--- a/App/ClientApp/src/app/layout/tenants/add/add.component.html
+++ b/App/ClientApp/src/app/layout/tenants/add/add.component.html
@@ -43,9 +43,9 @@
                 <div class="validation-msg" style="color:red">
                   <ul style="list-style-type:none">
                     <li class="text-danger" *ngIf="tenantFormErrorObject.showProfilePictureSizeError">
-                      File size should not be greater the 200kb
+                      File size should not be greater than 200kb
                     </li>
-                    <li class="text-danger" *ngIf="contactFormErrorObject.showProfilePictureTypeError">
+                    <li class="text-danger" *ngIf="tenantFormErrorObject.showProfilePictureTypeError">
                       Invalid file type
                     </li>
                   </ul>
