--- a/App/ClientApp/src/app/layout/users/add/add-edit.component.html
+++ b/App/ClientApp/src/app/layout/users/add/add-edit.component.html
@@ -35,7 +35,7 @@
                 <div class="validation-msg" style="color:red">
                   <ul style="list-style-type:none">
                     <li class="text-danger" *ngIf="userFormErrorObject.showProfilePictureSizeError">
-                      File size should not be greater the 200kb
+                      File size should not be greater than 200kb
                     </li>
                     <li class="text-danger" *ngIf="userFormErrorObject.showProfilePictureTypeError">
                       Invalid file type
