minor issues resolved.

--- a/App/ClientApp/src/app/select-tenant/select-tenant.component.html
+++ b/App/ClientApp/src/app/select-tenant/select-tenant.component.html
@@ -14,9 +14,7 @@
                         <img [src]="tenant.TenantLogo"/>
                       </div>
                       <div class="account-title-box">
-                        <div class="account-title"> {{tenant.TenantName}} </div>
-                        <!-- <p *ngIf='tenant.IsLastAccessed'> Last Accessed </p>
-                        <p *ngIf='!tenant.IsLastAccessed'> </p> -->
+                        <div class="account-title text-wrap"> {{tenant.TenantName}} </div>
                       </div>
                   </div>
               </div>
