--- a/App/ClientApp/src/app/layout/tenantuser/list/list.component.html
+++ b/App/ClientApp/src/app/layout/tenantuser/list/list.component.html
@@ -62,17 +62,18 @@
           <ng-container matColumnDef="actions">
             <th class="width15 ip-w-35" mat-header-cell *matHeaderCellDef> Actions </th>
             <td mat-cell *matCellDef="let element">
-              <div class="action-btns btn-tbl-action" *ngIf="element.EmailAddress!='instancemanager@nis.com'">
-                <button type="button" title="View TenantUser" (click)="viewTenantUser(element)" id="btnView" routerLink="View"><span class="fa fa-file-text-o"></span></button>
-                <button type="button" title="Update TenantUser" *ngIf="element.IsActive" (click)="editTenantUser(element)" id="btnUpdate">
+              <div class="action-btns btn-tbl-action" *ngIf="element.EmailAddress!='instancemanager@nis.com' && element.EmailAddress!=loginUserEmailAddress">
+                <button type="button" title="View Tenant User" (click)="viewTenantUser(element)" id="btnView" routerLink="View"><span class="fa fa-file-text-o"></span></button>
+                <button type="button" title="Update Tenant User" *ngIf="element.IsActive" (click)="editTenantUser(element)" id="btnUpdate">
                   <span class="fa fa-pencil-square-o"></span>
                 </button>
-                <button type="button" (click)="unLockTenantUser(element)" *ngIf="element.IsLocked" title="Unlock TenantUser"><span class="fa fa-lock"></span></button>
-                <button type="button" (click)="unLockTenantUser(element)" *ngIf="!element.IsLocked" title="Lock TenantUser"><span class="fa fa-unlock-alt"></span></button>
-                <button type="button" (click)="activeDeactiveTenantUser(element)" title="Deactivate TenantUser" *ngIf="element.IsActive"><span class="fa fa-toggle-on text-success"></span></button>
-                <button type="button" (click)="activeDeactiveTenantUser(element)" title="Activate TenantUser" *ngIf="!element.IsActive"><span class="fa fa-toggle-off text-success"></span></button>
+                <button type="button" (click)="unLockTenantUser(element)" *ngIf="element.IsLocked" title="Unlock Tenant User"><span class="fa fa-lock"></span></button>
+                <button type="button" (click)="unLockTenantUser(element)" *ngIf="!element.IsLocked" title="Lock Tenant User"><span class="fa fa-unlock-alt"></span></button>
+                <button type="button" (click)="activeDeactiveTenantUser(element)" title="Deactivate Tenant User" *ngIf="element.IsActive"><span class="fa fa-toggle-on text-success"></span></button>
+                <button type="button" (click)="activeDeactiveTenantUser(element)" title="Activate Tenant User" *ngIf="!element.IsActive"><span class="fa fa-toggle-off text-success"></span></button>
+                <button type="button" (click)="resetPassword(element)" *ngIf="!element.IsLocked && element.IsActive" title="Reset Password"><span class="fa fa-refresh"></span></button>
               </div>
-              <div class="text-left" *ngIf="element.EmailAddress=='instancemanager@nis.com'">
+              <div class="text-left" *ngIf="element.EmailAddress=='instancemanager@nis.com' || element.EmailAddress==loginUserEmailAddress">
                 NA
               </div>
             </td>
