--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class='top-bar fixed'>
-  <button class="fa float-left hamburger xs-hamburger fa" (click)="toggleNav()" [ngClass]="collapse_toogleClass"></button>
-  <div class="side-bar-logo text-center d-none d-md-block" (click)="navigateToRespectiveUserLandingPage()" style="cursor: pointer;">
+  <button class="fa float-left hamburger xs-hamburger fa" (click)="toggleNav()" [ngClass]="collapse_toogleClass" *ngIf='IsSideRequired==true'></button>
+  <div class="side-bar-logo text-center d-none d-md-block" (click)="navigateToRespectiveUserLandingPage()" style="cursor: pointer;" *ngIf='IsSideRequired==true'>
     <img src="assets/images/new_nis_logo_white.png" width="250">
   </div>
   <!--mobile start-->
@@ -9,7 +9,7 @@
   </div>
 
   <ul class='nav nav-toolbar float-right' [ngClass]="isTopbarShow? 'show':'hide'">
-    <li class="nav-item" *ngIf='isTenantAdminUser'>
+    <li class="nav-item" *ngIf='isTenantAdminUser && IsSideRequired==true'>
       <a class="nav-link top-nav-link" id="settingsSideBar" (click)="ChangeSideBar()">
         <i class="fa fa-cog"></i>
       </a>
@@ -17,10 +17,10 @@
     <li class="nav-item dropdown float-right">
       <a class="nav-link top-nav-link" id="dropdownMenuButton" data-toggle="dropdown">
         <span class="user-name-nav">{{loggedInUserName}}</span>
-        <i class="fa fa-angle-down ml-2"></i>
+        <i class="fa fa-angle-down ml-2" *ngIf='IsSideRequired==true'></i>
       </a>
 
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" *ngIf='IsSideRequired==true'>
         <a class="dropdown-item" (click)="navigateToProfile()">Profile</a>
         <a class="dropdown-item" (click)="navigateToChangePassword()">Change Password</a>
         <a class="dropdown-item" (click)="switchTenant()" *ngIf="isUserHaveMultiTenantAccess">Switch Tenant</a>
@@ -32,7 +32,7 @@
 
   <!--mobile end-->
   <ul class='nav nav-toolbar float-right show-toolbar'>
-    <li class="nav-item" *ngIf="isTenantAdminUser">
+    <li class="nav-item" *ngIf="isTenantAdminUser && IsSideRequired==true">
       <a class="nav-link top-nav-link" id="settingsSideBar" (click)="ChangeSideBar()">
         <span></span>
         <i id="HomeSettingIcon" *ngIf="!IsMainMenu" class="fa fa-home" title="Home"></i>
@@ -47,9 +47,9 @@
     <li class="nav-item dropdown">
       <a class="nav-link top-nav-link" id="dropdownMenuButton" data-toggle="dropdown">
         <span class="user-name-nav">{{loggedInUserName}}</span>
-        <i class="fa fa-angle-down ml-2"></i>
+        <i class="fa fa-angle-down ml-2" *ngIf='IsSideRequired==true'></i>
       </a>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" *ngIf='IsSideRequired==true'>
         <a class="dropdown-item" (click)="navigateToProfile()">Profile</a>
         <a class="dropdown-item" (click)="navigateToChangePassword()">Change Password</a>
         <a class="dropdown-item" (click)="switchTenant()" *ngIf="isUserHaveMultiTenantAccess">Switch Tenant</a>
@@ -60,7 +60,7 @@
 </div>
 
 <div class="side-bar-container" [ngClass]="sidebar_class" (mouseenter)="showSidebar()" (mouseleave)="hideSidebar()">
-  <div class="side-bar-nav stylescrollbar">
+  <div class="side-bar-nav stylescrollbar" *ngIf='IsSideRequired==true'>
     <ul class='side-bar-ul'>
       <li [ngClass]="(URL=='/dashboard')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToDashoard()"
           *ngIf="IsMainMenu && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Dashboard','Operation' : 'View'}))">
