--- a/App/ClientApp/src/app/layout/widget-dynamic/list/list.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/list/list.component.html
@@ -22,50 +22,54 @@
         </div>
       </div>
       <div class="widget-area-grid padding-0">
-        <table mat-table [dataSource]="dataSource" matSort class="table-cust">
+        <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
           <!-- Position Column -->
+          <ng-container matColumnDef="Name">
+            <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <td mat-cell *matCellDef="let dynamicwidget">{{dynamicwidget.WidgetName}}</td>
+          </ng-container>
           <ng-container matColumnDef="Product">
-            <th class="width17 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Product Type </th>
-            <td mat-cell *matCellDef="let dynamicwidget">{{dynamicwidget.Product}}</td>
+            <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Page Type </th>
+            <td mat-cell *matCellDef="let dynamicwidget">{{dynamicwidget.PageTypeName}}</td>
           </ng-container>
 
           <ng-container matColumnDef="Entity">
-            <th class="width13 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Entity Type </th>
+            <th class="width15 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Entity Type </th>
             <td mat-cell *matCellDef="let dynamicwidget">
-              <span *ngIf="dynamicwidget.Entity==null">-</span>
-              <span *ngIf="dynamicwidget.Entity!=null">{{dynamicwidget.Entity}} </span>
+              <span *ngIf="dynamicwidget.EntityName==null">-</span>
+              <span *ngIf="dynamicwidget.EntityName!=null">{{dynamicwidget.EntityName}} </span>
             </td>
           </ng-container>
           <ng-container matColumnDef="Widget">
-            <th class="width8 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header> Widget Type </th>
+            <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header> Widget Type </th>
             <td mat-cell *matCellDef="let dynamicwidget">
-              <span *ngIf="dynamicwidget.Widget==null">-</span>
-              <span *ngIf="dynamicwidget.Widget!=null">{{dynamicwidget.Widget}} </span>
+              <span *ngIf="dynamicwidget.WidgetType==null">-</span>
+              <span *ngIf="dynamicwidget.WidgetType!=null">{{dynamicwidget.WidgetType}} </span>
             </td>
           </ng-container>
           <ng-container matColumnDef="Owner">
-            <th class="width13 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Owner </th>
+            <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Owner </th>
             <td mat-cell *matCellDef="let dynamicwidget">
-              <span *ngIf="dynamicwidget.Owner==null">-</span>
-              <span *ngIf="dynamicwidget.Owner!=null">{{dynamicwidget.Owner}} </span>
+              <span *ngIf="dynamicwidget.CreatedByName==null">-</span>
+              <span *ngIf="dynamicwidget.CreatedByName!=null">{{dynamicwidget.CreatedByName}} </span>
             </td>
           </ng-container>
           <ng-container matColumnDef="PublishedBy">
-            <th class="width13 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Published By </th>
+            <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Published By </th>
             <td mat-cell *matCellDef="let dynamicwidget">
-              <span *ngIf="dynamicwidget.PublishedBy==null">-</span>
-              <span *ngIf="dynamicwidget.PublishedBy!=null">{{dynamicwidget.PublishedBy}} </span>
+              <span *ngIf="dynamicwidget.PublishedByName==null">-</span>
+              <span *ngIf="dynamicwidget.PublishedByName!=null">{{dynamicwidget.PublishedByName}} </span>
             </td>
           </ng-container>
           <ng-container matColumnDef="PublishedDate">
-            <th class="width11 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header>  Published Date </th>
+            <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header>  Published Date </th>
             <td mat-cell *matCellDef="let dynamicwidget">
-              <span *ngIf="dynamicwidget.Widget==null">-</span>
-              <span *ngIf="dynamicwidget.Widget!=null">{{dynamicwidget.PublishedDate}} </span>
+              <span *ngIf="dynamicwidget.PublishedDate==null">-</span>
+              <span *ngIf="dynamicwidget.PublishedDate!=null">{{dynamicwidget.PublishedDate}} </span>
             </td>
           </ng-container>
           <ng-container matColumnDef="Status">
-            <th class="width8 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header>Status </th>
+            <th class="width5 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header>Status </th>
             <td mat-cell *matCellDef="let dynamicwidget">
               <span class="badge badge-primary p-1" *ngIf="dynamicwidget.Status=='New'">{{dynamicwidget.Status}}</span>
               <span class="badge badge-success p-1" *ngIf="dynamicwidget.Status=='Published'">{{dynamicwidget.Status}}</span>
@@ -73,22 +77,23 @@
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th class="width17 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
+            <th class="width15 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
             <td mat-cell *matCellDef="let dynamicwidget">
               <div class="action-btns btn-tbl-action">
-                <button type="button" id="btnViewRole" title="View Role" (click)="navigateToView()">
+                <button type="button" id="btnViewRole" title="View" (click)="navigateToView()">
                   <span class="fa fa-file-text-o"></span>
                 </button>
-                <button type="button" id="btnUpdateRole"  *ngIf="dynamicwidget.Status=='New'" title="Update">
+                <button type="button" id="btnUpdateRole" *ngIf="dynamicwidget.Status=='New'" title="Update" (click)="navigationToEditDynamicWidget(dynamicwidget)">
                   <span class="fa fa-pencil-square-o"></span>
                 </button>
-                <button type="button" id="btnUpdateRole" title="Delete">
+                <button type="button" id="btnUpdateRole" title="Delete" (click)="DeleteDynamicWidget(dynamicwidget)">
                   <span class="fa fa-trash"></span>
                 </button>
-                <button type="button" title="Publish" id="btnPublish" *ngIf="dynamicwidget.Status=='New'"><span class="fa fa-share"></span></button>
-                <button type="button" title="Clone" id="btnClone" *ngIf="dynamicwidget.Status=='Published'">  <span class="fa fa-clone"></span>
+                <button type="button" title="Publish" id="btnPublish" *ngIf="dynamicwidget.Status=='New'" (click)="PublishDynamicWidget(dynamicwidget)"><span class="fa fa-share"></span></button>
+                <button type="button" title="Clone" id="btnClone" *ngIf="dynamicwidget.Status=='Published'" (click)="CloneDynamicWidget(dynamicwidget)">
+                  <span class="fa fa-clone"></span>
                 </button>
-                <button type="button" title="Preview" id="btnPreview">
+                <button type="button" title="Preview" id="btnPreview" (click)="PreviewDynamicWidget(dynamicwidget)">
                   <span class="fa fa-eye"></span>
                 </button>
               </div>
@@ -103,94 +108,91 @@
   </div>
   <!--desktop view end-->
 
-  <form>
+  <form [formGroup]="DynamicWidgetFilterForm">
     <div class="filter-popup" [ngClass]="!isFilter? 'filter-popup':'filter-popup-show'">
       <div class="filter-head">
         <label class="m-0">Apply Filter</label>
       </div>
       <div class="filter-body-left d-flex flex-column stylescrollbar">
         <div class="form-group">
-          <label>Product Type</label>
-          <select class="form-control">
-            <option>Select</option>
-            <option>Common</option>
-            <option>Saving</option>
-            <option>Current</option>
+          <label>Page Type</label>
+          <select formControlName="filterPageType" (change)="onPageTypeSelected($event)" class="form-control">
+            <option *ngFor="let pt of pageTypeList" [value]="pt.Identifier">{{pt.PageTypeName}}</option>
           </select>
         </div>
         <div class="form-group">
-          <label>Entity Type</label>
-          <select class="form-control">
-            <option>Select</option>
-            <option>Customer</option>
-            <option>Account</option>
-            <option>Transaction</option>
+          <label>Entity</label>
+          <select formControlName="filterEntity" (change)="onEntitySelected($event)" class="form-control">
+            <option *ngFor="let pt of entityList" [value]="pt.Identifier">{{pt.Name}}</option>
           </select>
         </div>
         <div class="form-group">
           <label>Widget Type</label>
-          <select class="form-control">
-            <option>Select</option>
-            <option>Form</option>
-            <option>Table</option>
-            <option>Line Graph</option>
-            <option>Bar Graph</option>
-            <option>Pie Chart</option>
+          <select class="form-control" formControlName="filterWidgetType">
+            <option value="0" selected> Select Widget Type</option>
+            <option value="Form">Form</option>
+            <option value="Table">Table</option>
+            <option value="LineGraph">Line Graph</option>
+            <option value="BarGraph">Bar Graph</option>
+            <option value="PieChart">Pie Chart</option>
+            <option value="HTMLEditor">HTML Editor</option>
           </select>
         </div>
         <div class="form-group">
           <label>Owner</label>
-          <input type="text" class="form-control" />
+          <input type="text" class="form-control" formControlName="filterOwner" />
         </div>
         <div class="form-group">
-          <label>Status</label>
-          <select class="form-control">
-            <option>Select</option>
-            <option>New</option>
-            <option>Published</option>
+          <label>Status Status</label>
+          <select class="form-control" formControlName="filterStatus">
+            <option value="0" selected> Select</option>
+            <option value="New">New</option>
+            <option value="Published">Published</option>
           </select>
         </div>
         <div class="form-group">
           <label>Start Date</label>
           <div class="position-relative">
-            <input [owlDateTime]="dt" class="form-control" id="inputFromDate">
+            <input [owlDateTime]="dt" class="form-control" id="inputFromDate" formControlName="filterPublishedOnFromDate"
+                   placeholder="Please select start date" readonly (ngModelChange)="onPublishedFilterDateChange($event)">
             <span [owlDateTimeTrigger]="dt" class="datetime-icon">
               <i class="fa fa-calendar"></i>
             </span>
             <owl-date-time #dt [pickerType]="'calendar'"></owl-date-time>
           </div>
-          <!--<div class="text-danger" *ngIf="filterFromDateError">
+          <div class="text-danger" *ngIf="filterFromDateError">
             {{filterFromDateErrorMessage}}
-          </div>-->
+          </div>
         </div>
         <div class="form-group">
           <label>End Date</label>
           <div class="position-relative">
-            <input [owlDateTime]="dt1" class="form-control" id="inputToDate">
+            <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filterPublishedOnToDate"
+                   placeholder="Please select end date" readonly (ngModelChange)="onPublishedFilterDateChange($event)">
             <span [owlDateTimeTrigger]="dt1" class="datetime-icon">
               <i class="fa fa-calendar"></i>
             </span>
             <owl-date-time #dt1 [pickerType]="'calendar'"></owl-date-time>
           </div>
-          <!--<div class="text-danger" *ngIf="filterToDateError">
+          <div class="text-danger" *ngIf="filterToDateError">
             {{filterToDateErrorMessage}}
-          </div>-->
+          </div>
         </div>
       </div>
       <!--[ngClass]="filterClass"-->
       <div class="filter-footer">
         <ul class="nav">
-          <li class="nav-item width33" id="liSearchFilter" title="Search">
+          <li class="nav-item width33" id="liSearchFilter" title="Search" (click)="searchDynamicWidgetRecordFilter('search')">
             <a class="nav-link p-0">
               <span class="fa fa-check"></span>
             </a>
           </li>
-          <li class="nav-item width33" id="liResetFilter" title="Reset">
+          <li class="nav-item width33" id="liResetFilter" title="Reset" (click)="searchDynamicWidgetRecordFilter('reset')">
             <a class="nav-link p-0">
               <span class="fa fa-refresh"></span>
             </a>
           </li>
-          <li class="nav-item width33" id="liCloseFilter" title="Close" (click)="isFilter=!isFilter">
+          <li class="nav-item width33" id="liCloseFilter" title="Close" (click)="closeFilter()">
             <a class="nav-link p-0">
               <span class="fa fa-close"></span>
             </a>
