tenant group user add, edit and view list screen added - Avail for tenant group manager

--- a/App/ClientApp/src/app/layout/tenantuser/list/list.component.html
+++ b/App/ClientApp/src/app/layout/tenantuser/list/list.component.html
@@ -6,7 +6,7 @@
     </div>
     <div>
       <button class="btn-add btn-cust" title="Add TenantUser" (click)="navigateToAddTenantUser()" id="btnAddTenantUsers">
-        <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> Instant Tenant User
+        <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> Instance Tenant User
       </button>
     </div>
   </div>
