--- a/App/ClientApp/src/app/layout/tenant-group-users/view/view.component.html
+++ b/App/ClientApp/src/app/layout/tenant-group-users/view/view.component.html
@@ -1,1 +1,57 @@
-<p>view works!</p>
+<div class="main-container">
+    <div class="page-title">
+      <span class="xs-title"> Tenant Group User Details </span>
+    </div>
+  
+    <div class="card border-0 mb-2 card-shadow">
+      <div class="card-body" id="collapseDetails">
+        <div class="row">
+          <div class="col-md-4 col-sm-5 col-12 form-group">
+            <div class="profile-avtar-box">
+              <div *ngIf="tenantgroupuserRecord.Image!='' && tenantgroupuserRecord.Image!=null" class="image-preview">
+                <img [src]="tenantgroupuserRecord.Image" class="profile-avtar">
+              </div>
+              <div *ngIf="tenantgroupuserRecord.Image=='' || tenantgroupuserRecord.Image==null">
+                <div class="ltr-img">
+                  <span *ngIf="tenantgroupuserRecord.FirstName!=undefined">{{tenantgroupuserRecord.FirstName.charAt(0) | titlecase}}</span>
+                  <span *ngIf="tenantgroupuserRecord.LastName!=undefined">{{tenantgroupuserRecord.LastName.charAt(0) | titlecase}}</span>
+                </div>
+              </div>
+            </div>
+            <div style="clear:both"></div>
+          </div>
+          <div class="col-md-8 col-sm-7 col-xs-12">
+            <div class="row">
+              <div class="col-xl-5 col-lg-5 col-md-6 col-sm-6 form-group">
+                <label>First Name</label>
+                <div>{{tenantgroupuserRecord.FirstName}}</div>
+              </div>
+              <div class="col-xl-5 col-lg-5 col-md-6 col-sm-6 form-group">
+                <label>Last Name</label>
+                <div>{{tenantgroupuserRecord.LastName}}</div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xl-5 col-lg-5 col-md-6 col-sm-6 form-group">
+                <label>Email Id</label>
+                <div>{{tenantgroupuserRecord.EmailAddress}}</div>
+              </div>
+              <div class="col-xl-5 col-lg-5 col-md-6 col-sm-6 form-group">
+                <label>Mobile No.</label>
+                <div>{{tenantgroupuserRecord.ContactNumber}}</div>
+              </div>
+            </div>
+  
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card border-0 mt-4 mb-3 bg-transparent">
+      <div class="card-body p-0">
+        <button class="btn-footer-fill mr-2" id="btnSave" (click)="editTenantGroupUser()">Update</button>
+        <button class="btn-footer-fill-delete bg-danger mr-2" (click)="deleteTenantGroupUser()" id="btnDelete">Delete</button>
+        <button class="btn-footer-outline" id="btnCancel" (click)="backClicked()">Cancel</button>
+      </div>
+    </div>
+  </div>
+  
